# imswitch-lightsheet

./: .gitignore  LICENSE  README.md  create_react_ui.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build_react.yml
src/imswitch_lightsheet/: .gitignore  __init__.py  imswitch.yaml  imswitch_lightsheet_controller.py  imswitch_lightsheet_info.py  imswitch_lightsheet_manager.py  imswitch_lightsheet_widget.py
src/imswitch_lightsheet/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/imswitch_lightsheet/ui/: craco.config.js  package-lock.json  package.json
src/imswitch_lightsheet/ui/public/: index.html
src/imswitch_lightsheet/ui/src/: Widget.jsx  index.js
