[metadata]
name = imswitch-lightsheet
version = attr: imswitch_lightsheet.__version__
description = This module will connect ImSwitch to arkitekt-next
long_description = file: README.md
long_description_content_type = text/markdown

author = Benedict
author_email = bene.d@gmx.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: imswitch
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    #arkitekt-next[all]==0.8.82

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
imswitch.manifest =
    imswitch-lightsheet = imswitch_lightsheet:imswitch.yaml
imswitch.implugins =
    imswitch_lightsheet_controller = imswitch_lightsheet:imswitch_lightsheet_controller
    imswitch_lightsheet_widget = imswitch_lightsheet:imswitch_lightsheet_widget
    imswitch_lightsheet_manager = imswitch_lightsheet:imswitch_lightsheet_manager
    imswitch_lightsheet_info = imswitch_lightsheet:imswitch_lightsheet_info

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
